# drf-ecommerce

./: .gitignore  README.md
ecommerce/: .env  Makefile  commands.md  manage.py  pyproject.toml  requirements.txt
ecommerce/ecommerce/: urls.py
ecommerce/ecommerce/product/: models.py  serializers.py  views.py
ecommerce/ecommerce/product/migrations/: 0001_initial.py  0002_alter_product_category.py  0003_alter_category_name.py
ecommerce/ecommerce/settings/: base.py  local.py
ecommerce/ecommerce/tests/: conftest.py  factories.py
ecommerce/ecommerce/tests/product/: test_endpoints.py  test_models.py
